backend/tests/corpus/shadowing-neg-010.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sAllowedRepos
metadata:
  labels:
    cape-test-case: shadowing-neg-010
    owner-team: team-epsilon
  name: img-policy-clean-shadowing-neg-010
spec:
  match:
    kinds:
    - apiGroups:
      - ''
      kinds:
      - Pod
    namespaces:
    - shadow-ns-shadowing-neg-010-0
    - shadow-ns-shadowing-neg-010-1
    - shadow-ns-shadowing-neg-010-2
  parameters:
    repos:
    - mycompany.com/
